import React from "react";
import { mount, shallow } from "enzyme";
import Tooltip from ".";
import StyledTooltipWrapper from "./tooltip.style";
import StyledTooltipPointer from "./tooltip-pointer.style";
import { assertStyleMatch } from "../../__spec_helper__/test-utils";

const positions = ["top", "bottom", "left", "right"];

function render(props = {}, renderer = mount) {
  const children = <div>foo</div>;
  const message = "foo";

  return renderer(
    <Tooltip {...props} message={message || props.message}>
      {props.children || children}
    </Tooltip>
  );
}

describe("Tooltip", () => {
  describe("default props", () => {
    it("matches snapshot", () => {
      const wrapper = render({}, shallow);

      expect(wrapper).toMatchSnapshot();
    });
  });

  describe("controlled", () => {
    it("matches snapshot when isVisible is true", () => {
      const wrapper = render({ isVisible: true }, shallow);

      expect(wrapper).toMatchSnapshot();
    });

    it("matches snapshot when isVisible is false", () => {
      const wrapper = render({ isVisible: false }, shallow);

      expect(wrapper).toMatchSnapshot();
    });
  });

  describe("styles", () => {
    describe("TooltipWrapper", () => {
      describe("default", () => {
        it("applies the default styles", () => {
          assertStyleMatch(
            {
              bottom: "auto",
              right: "auto",
              position: "relative",
              maxWidth: "300px",
              zIndex: "2000",
              textAlign: "left",
              color: "#FFFFFF",
              display: "inline-block",
              padding: "8px 12px",
              wordBreak: "normal",
              whiteSpace: "pre-wrap",
              fontSize: "14px",
              lineHeight: "1.5rem",
              fontWeight: "400",
              backgroundColor: "#000000",
            },
            render().find(StyledTooltipWrapper)
          );
        });

        it("applies the correct styles when size is 'large'", () => {
          assertStyleMatch(
            { fontSize: "16px" },
            render({ size: "large" }).find(StyledTooltipWrapper)
          );
        });

        it("applies the correct styles  type === 'error'", () => {
          assertStyleMatch(
            { backgroundColor: "#C7384F" },
            render({ type: "error" }).find(StyledTooltipWrapper)
          );
        });

        it.each(positions)(
          "applies the offset when position is %s",
          (position) => {
            assertStyleMatch(
              { [position]: "1px" },
              render({ position }).find(StyledTooltipWrapper)
            );
          }
        );
      });
    });

    describe("when the tooltip targets a component that is a part of an input", () => {
      const offsets = {
        small: "5px",
        medium: "1px",
        large: "-3px",
      };

      describe.each(positions)("and position is %s", (position) => {
        it.each(["small", "medium", "large"])(
          "sets the offset as expected when size is %s",
          (size) => {
            assertStyleMatch(
              {
                [position]: offsets[size],
              },
              render({ position, isPartOfInput: true, inputSize: size }).find(
                StyledTooltipWrapper
              )
            );
          }
        );
      });
    });

    describe("TooltipPointer", () => {
      describe("when position === 'top' / default", () => {
        it("applies the correct styles", () => {
          assertStyleMatch(
            {
              position: "absolute",
              width: "0",
              height: "0",
              borderLeft: "8px solid transparent",
              borderRight: "8px solid transparent",
              borderTop: "8px solid #000000",
              bottom: "-8px",
            },
            render().find(StyledTooltipPointer)
          );
        });
      });

      it("applies the correct styles when type === 'error'", () => {
        assertStyleMatch(
          { borderTop: "8px solid #C7384F" },
          render({ type: "error" }).find(StyledTooltipPointer)
        );
      });

      describe('when position === "bottom"', () => {
        it("applies the correct styles", () => {
          assertStyleMatch(
            {
              borderLeft: "8px solid transparent",
              borderRight: "8px solid transparent",
              borderBottom: "8px solid #000000",
              top: "-8px",
            },
            render({ position: "bottom" }).find(StyledTooltipPointer)
          );
        });

        it("applies the correct styles when type === 'error'", () => {
          assertStyleMatch(
            { borderBottom: "8px solid #C7384F" },
            render({ position: "bottom", type: "error" }).find(
              StyledTooltipPointer
            )
          );
        });
      });

      describe('when position === "left"', () => {
        it("applies the correct styles", () => {
          assertStyleMatch(
            {
              borderTop: "8px solid transparent",
              borderBottom: "8px solid transparent",
              borderLeft: "8px solid #000000",
              right: "-8px",
            },
            render({ position: "left" }).find(StyledTooltipPointer)
          );
        });

        it("applies the correct styles when type === 'error'", () => {
          assertStyleMatch(
            { borderLeft: "8px solid #C7384F" },
            render({ position: "left", type: "error" }).find(
              StyledTooltipPointer
            )
          );
        });
      });

      describe('when position === "right"', () => {
        it("applies the correct styles", () => {
          assertStyleMatch(
            {
              borderTop: "8px solid transparent",
              borderBottom: "8px solid transparent",
              borderRight: "8px solid #000000",
              left: "-8px",
            },
            render({ position: "right" }).find(StyledTooltipPointer)
          );
        });

        it("applies the correct styles when type === 'error'", () => {
          assertStyleMatch(
            { borderRight: "8px solid #C7384F" },
            render({ position: "right", type: "error" }).find(
              StyledTooltipPointer
            )
          );
        });
      });
    });
  });
});
