// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip controlled matches snapshot when isVisible is false 1`] = `
<ForwardRef(TippyWrapper)
  delay={100}
  placement="top"
  render={[Function]}
  visible={false}
>
  <div>
    foo
  </div>
</ForwardRef(TippyWrapper)>
`;

exports[`Tooltip controlled matches snapshot when isVisible is true 1`] = `
<ForwardRef(TippyWrapper)
  delay={100}
  placement="top"
  render={[Function]}
  visible={true}
>
  <div>
    foo
  </div>
</ForwardRef(TippyWrapper)>
`;

exports[`Tooltip default props matches snapshot 1`] = `
<ForwardRef(TippyWrapper)
  delay={100}
  placement="top"
  render={[Function]}
>
  <div>
    foo
  </div>
</ForwardRef(TippyWrapper)>
`;
